js iniciado - localstorage ok

--- a/pages/home/index.html
+++ b/pages/home/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="../../styles/main.css">
   <link rel="stylesheet" href="../../styles/aside.css">
   <link rel="stylesheet" href="../home/index.css">
-  <link rel="stylesheet" href="../../styles/mobile.css"> 
+  <link rel="stylesheet" href="../../styles/mobile.css">
   <link rel="shortcut icon" href="/assets/img/favicon.ico" type="image/x-icon">
   <title>Webwomen</title>
   <meta name="description" content="Está procurando oportunidades de estágio, emprego ou bolsas de estudo? 
@@ -32,13 +32,12 @@
       </section>
     </div>
   </header>
-  <div class="container-full"  id="vagas">
+  <div class="container-full" id="vagas">
     <div class="container main-aside">
       <main class="container-main">
         <h2 class="title-4">Vagas</h2>
-        <!-- <div class="columns-main"> -->
         <ul class="list-main">
-          <li class="item-main">
+          <!-- <li class="item-main">
             <h2 class="title-4">Pessoa desenvolvedora front-end - React JS</h2>
             <div class="location">
               <span>Kenzie Academy</span>
@@ -48,7 +47,10 @@
               ipsum,
               dolor sit amet consectetur dipisicing elit. At, quis?</p>
             <div class="footer-list">
-              <span>Home Office</span>
+              <div>
+                <span>Home Office</span>
+                <span>Presencial</span>
+              </div>
               <button class="button-little">Candidatar</button>
             </div>
           </li>
@@ -62,7 +64,10 @@
               ipsum,
               dolor sit amet consectetur dipisicing elit. At, quis?</p>
             <div class="footer-list">
-              <span>Presencial</span>
+              <div>
+                <span>Home Office</span>
+                <span>Presencial</span>
+              </div>
               <button class="button-little">Candidatar</button>
             </div>
           </li>
@@ -76,7 +81,10 @@
               ipsum,
               dolor sit amet consectetur dipisicing elit. At, quis?</p>
             <div class="footer-list">
-              <span>Híbrido</span>
+              <div>
+                <span>Home Office</span>
+                <span>Presencial</span>
+              </div>
               <button class="button-little">Candidatar</button>
             </div>
           </li>
@@ -90,19 +98,24 @@
               ipsum,
               dolor sit amet consectetur dipisicing elit. At, quis?</p>
             <div class="footer-list">
-              <span>Híbrido</span>
+              <div>
+                <span>Home Office</span>
+                <span>Presencial</span>
+              </div>
               <button class="button-little">Candidatar</button>
             </div>
-          </li>
+          </li> -->
         </ul>
       </main>
 
       <aside>
         <h2 class="title-4">Vagas selecionadas</h2>
-        <p class="text-2 empty-list">Você ainda não aplicou para nenhuma vaga</p>
-
+        <div class="empty-list">
+          <p class="text-2">Você ainda não aplicou para nenhuma vaga</p>
+          <img src="../../assets/img/no-items.svg" alt="sem itens" />
+        </div>
         <ul class="list-aside">
-          <li class="item-aside">
+<!--           <li class="item-aside">
             <div class="container-job">
               <h2 class="title-5">Pessoa desenvolvedora front-end - React JS</h2>
               <button>
@@ -149,7 +162,7 @@
               <span>Brazilians in Tech</span>
               <span>São Paulo</span>
             </div>
-          </li>
+          </li> -->
         </ul>
       </aside>
     </div>
