reorganização do código, projeto finalizado

--- a/pages/home/index.html
+++ b/pages/home/index.html
@@ -8,8 +8,10 @@
   <link rel="stylesheet" href="../../styles/globalStyles.css">
   <link rel="stylesheet" href="../../styles/main.css">
   <link rel="stylesheet" href="../../styles/aside.css">
-  <link rel="stylesheet" href="../home/index.css">
+  <link rel="stylesheet" href="../../styles/header.css">
   <link rel="stylesheet" href="../../styles/mobile.css">
+  <script defer src="jobsData.js"></script>
+  <script defer src="index.js"></script>
   <link rel="shortcut icon" href="/assets/img/favicon.ico" type="image/x-icon">
   <title>Webwomen</title>
   <meta name="description" content="Está procurando oportunidades de estágio, emprego ou bolsas de estudo? 
@@ -32,79 +34,13 @@
       </section>
     </div>
   </header>
+
   <div class="container-full" id="vagas">
     <div class="container main-aside">
       <main class="container-main">
         <h2 class="title-4">Vagas</h2>
         <ul class="list-main">
-          <!-- <li class="item-main">
-            <h2 class="title-4">Pessoa desenvolvedora front-end - React JS</h2>
-            <div class="location">
-              <span>Kenzie Academy</span>
-              <span>Curitiba</span>
-            </div>
-            <p>Lorem ipsum, dolor sit amet Lorem ipsum, dolor sit ame ips consectetur consecte tur Lorem
-              ipsum,
-              dolor sit amet consectetur dipisicing elit. At, quis?</p>
-            <div class="footer-list">
-              <div>
-                <span>Home Office</span>
-                <span>Presencial</span>
-              </div>
-              <button class="button-little">Candidatar</button>
-            </div>
-          </li>
-          <li class="item-main">
-            <h2 class="title-4">Pessoa desenvolvedora back-end - Node JS</h2>
-            <div class="location">
-              <span>Brazilians in Tech</span>
-              <span>Rio de Janeiro</span>
-            </div>
-            <p>Lorem ipsum, dolor sit amet Lorem ipsum, dolor sit ame ips consectetur consecte tur Lorem
-              ipsum,
-              dolor sit amet consectetur dipisicing elit. At, quis?</p>
-            <div class="footer-list">
-              <div>
-                <span>Home Office</span>
-                <span>Presencial</span>
-              </div>
-              <button class="button-little">Candidatar</button>
-            </div>
-          </li>
-          <li class="item-main">
-            <h2 class="title-4">Pessoa desenvolvedora Mobile - React Native</h2>
-            <div class="location">
-              <span>Brazilians in Tech</span>
-              <span>Bahia</span>
-            </div>
-            <p>Lorem ipsum, dolor sit amet Lorem ipsum, dolor sit ame ips consectetur consecte tur Lorem
-              ipsum,
-              dolor sit amet consectetur dipisicing elit. At, quis?</p>
-            <div class="footer-list">
-              <div>
-                <span>Home Office</span>
-                <span>Presencial</span>
-              </div>
-              <button class="button-little">Candidatar</button>
-            </div>
-          </li>
-          <li class="item-main">
-            <h2 class="title-4">Pessoa desenvolvedora FullStack </h2>
-            <div class="location">
-              <span>Brazilians in Tech</span>
-              <span>São Paulo</span>
-            </div>
-            <p>Lorem ipsum, dolor sit amet Lorem ipsum, dolor sit ame ips consectetur consecte tur Lorem
-              ipsum,
-              dolor sit amet consectetur dipisicing elit. At, quis?</p>
-            <div class="footer-list">
-              <div>
-                <span>Home Office</span>
-                <span>Presencial</span>
-              </div>
-              <button class="button-little">Candidatar</button>
-            </div>
-          </li> -->
+          <!-- RENDERIZADO PELO JS -->
         </ul>
       </main>
 
@@ -115,60 +51,12 @@
           <img src="../../assets/img/no-items.svg" alt="sem itens" />
         </div>
         <ul class="list-aside">
-<!--           <li class="item-aside">
-            <div class="container-job">
-              <h2 class="title-5">Pessoa desenvolvedora front-end - React JS</h2>
-              <button>
-                <img src="../../assets/img/trash.svg" alt="lixeira">
-              </button>
-            </div>
-            <div class="location">
-              <span>Kenzie Academy</span>
-              <span>Curitiba</span>
-            </div>
-          </li>
-          <li class="item-aside">
-            <div class="container-job">
-              <h2 class="title-5">Pessoa desenvolvedora back-end - Node JS</h2>
-              <button>
-                <img src="../../assets/img/trash.svg" alt="lixeira">
-              </button>
-            </div>
-            <div class="location">
-              <span>Brazilians in Tech</span>
-              <span>Rio de Janeiro</span>
-            </div>
-          </li>
-          <li class="item-aside">
-            <div class="container-job">
-              <h2 class="title-5">Pessoa desenvolvedora Mobile - React Native</h2>
-              <button>
-                <img src="../../assets/img/trash.svg" alt="lixeira">
-              </button>
-            </div>
-            <div class="location">
-              <span>Brazilians in Tech</span>
-              <span>Bahia</span>
-            </div>
-          </li>
-          <li class="item-aside">
-            <div class="container-job">
-              <h2 class="title-5">Pessoa desenvolvedora FullStack</h2>
-              <button>
-                <img src="../../assets/img/trash.svg" alt="lixeira">
-              </button>
-            </div>
-            <div class="location">
-              <span>Brazilians in Tech</span>
-              <span>São Paulo</span>
-            </div>
-          </li> -->
+          <!-- RENDERIZADO PELO JS -->
         </ul>
       </aside>
     </div>
   </div>
-  <script src="jobsData.js"></script>
-  <script src="index.js"></script>
+
 </body>
 
 </html>
